<resources>
    // General
    <string name="lblSave">Save</string>
    <string name="lblYes">Yes</string>
    <string name="lblNo">No</string>

    // Main Menu
    <string name="app_name">Appointment Management</string>
    <string name="lblCreateAppointment">Create Appointment</string>
    <string name="lblViewEditAppointment">View/Edit Appointments</string>
    <string name="lblDeleteAppointment">Delete Appointment</string>
    <string name="lblMoveAppointment">Move Appointment</string>
    <string name="lblSearch">Search</string>
    
    // Create Appointment
    <string name="titleCreateAppointment">Create New Appointment</string>
    <string name="lblTitleAppointment">Title of Appointment</string>
    <string name="lblTimeAppointment">Time of Appointment</string>
    <string name="lblDetailsAppointment">Details of Appointment</string>
    <string name="error">(Web service error)</string>
    <string name="interrupted">(Web service interrupted)</string>
    <string name="no_results">(No suggestions)</string>
    <string name="working">Working...</string>
    <string name="btnThesaurus">Thesaurus</string>
    <string name="lblThesaurus">Type word here</string>

    // Delete Appointment
    <string name="titleDeleteAppointment">Delete Appointment</string>
    <string name="titleAppointments">Choose Appointment to Delete:</string>
    <string name="lblDeleteAll">Delete All Appointments for This Day</string>
    <string name="lblChooseWhichToDelete">Choose Appointment to Delete</string>
    <string name="txtNumberToDelete">Enter Number of Appointment to Delete:</string>
    <string name="txtConfirmDelete">Would you like to delete appointment:</string>
    <string name="lblDelete">Delete</string>

    // Search Appointment
    <string name="titleSearch">Search in Appointments</string>
    <string name="hintSearch">Type in text to search for</string>
    <string name="lblOk">OK</string>

    // View Appointments
    <string name="titleViewAppointment">View Appointments</string>
    <string name="lblEdit">Edit</string>
    <string name="titleViewDisplayAppointments">Choose Appointment to Edit:</string>
    <string name="txtNumberToEdit">Enter Number of Appointment to Edit:</string>

    // Move Appointments
    <string name="titleMoveAppointment">Move Appointment</string>
    <string name="lblMove">Move</string>
    <string name="titleMoveDisplayAppointments">Choose Appointment to Move:</string>
    <string name="txtNumberToMove">Enter Number of Appointment to Move:</string>
    <string name="titleChooseNewDate">Choose New Date for the Appointment:</string>
</resources>
