<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtConfirmDelete"/>

    <TextView
        android:id="@+id/tvDisplayAppointmentToDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDeleteYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblYes"/>

    <Button
        android:id="@+id/btnDeleteNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNo"/>

</LinearLayout>