<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/ActivityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleSearch"/>

    <EditText
        android:id="@+id/etStringToSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintSearch"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnSearchAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblSearch"/>

    <TextView
        android:id="@+id/tvDisplaySearchedAppointments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>