<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleAppointments"/>

    <TextView
        android:id="@+id/tvDisplayAppointments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvNumberToDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNumberToDelete"/>

    <EditText
        android:id="@+id/etNumberToDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnDeleteChosenAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDelete"/>

</LinearLayout>