<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitleOfAppointment"
        style="@style/h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTitleAppointment"/>

    <EditText
        android:id="@+id/inputTitleOfAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tvTimeOfAppointment"
        style="@style/h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTimeAppointment"/>

    <EditText
        android:id="@+id/inputTimeOfAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"/>

    <TextView
        android:id="@+id/tvDetailsOfAppointment"
        style="@style/h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDetailsAppointment"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inputDetailsOfAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:maxLines="3"
            android:focusable="true"
            android:enabled="true"/>

    </ScrollView>

    <Button
        android:id="@+id/btnSaveAppointment"
        style="@style/positiveButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblSave"/>

</LinearLayout>